# agentx

./: .gitignore  README.md
devops-hub/: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_REGISTRY.json  BRANDIVERSE_API_REVENUE.md  CODEBASE_ASSESSMENT.md  CONTRIBUTING.md  DASHBOARD_IMPLEMENTATION.md  DEPLOYMENT_SUMMARY.md  DYNAMIC_REPO_IMPROVEMENTS.md  Dockerfile  FLIPFLOW_30MIN_LAUNCH.md  FLIPFLOW_BLOCKER_1_FIX.md  FLIPFLOW_LAUNCH_PLAN.md  FLIPFLOW_MARKETING.md  FLIPFLOW_TEST_CHECKLIST.md  HITL_IMPLEMENTATION_SUMMARY.md  HITL_LIVE_DEMO.md  HITL_SESSION_COMPLETE.md  LOGIN_GUIDE.md  Makefile  PORTFOLIO_DASHBOARD.md  PRODUCTION_ROADMAP.md  QUICK_START.md  README.md  REVENUE_DASHBOARD.md  SERVICES_RUNNING.md  SESSION_COMPLETE_2026-01-11.md  SESSION_COMPLETE_2026-01-11_DASHBOARD.md  SESSION_SUMMARY_2026-01-09.md  SESSION_SUMMARY_2026-01-11.md  STRATEGIC_NEXT_STEPS.md  alembic.ini  check_status.py  create_demo_request.py  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  flipflow_credits_migration.sql  (+13 more)
devops-hub/.claude/: CLAUDE.md
devops-hub/built_in_agents/: __init__.py  base.py
devops-hub/core/: __init__.py  auth.py  database.py  integrations.py
devops-hub/docs/: API_VERSIONING.md  DATABASE_MIGRATION.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  HITL_SYSTEM_DESIGN.md  MONITORING.md  PERFORMANCE.md  SECURITY.md
devops-hub/factory/: __init__.py  agent_factory.py  agent_registry.py  agent_validator.py  registry.json
devops-hub/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
devops-hub/k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  (+7 more)
(+513 files in other folders)
