# DevOps Hub - Python Project Configuration

[project]
name = "devops-hub"
version = "1.3.0"
description = "AI Agent orchestration platform with workflow automation"
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | migrations/versions
    | htmlcov
    | dist
    | build
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
skip = ["migrations/versions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations/",
    "tests/",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
skips = ["B101", "B311"]  # Allow assert, random for non-security use

[tool.coverage.run]
source = ["core", "service", "factory", "built_in_agents"]
omit = ["*/tests/*", "*/__pycache__/*", "migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
